[gd_scene load_steps=2 format=3 uid="uid://cvgt4nfunhaed"]

[ext_resource type="Script" path="res://scenes/gui/components/facility_selector.gd" id="1_70fa5"]

[node name="FacilitySelector" type="VBoxContainer"]
offset_right = 192.0
offset_bottom = 256.0
theme_override_constants/separation = 12
script = ExtResource("1_70fa5")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "选择要建造的设施:"

[node name="FacilityContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Farm" type="Button" parent="FacilityContainer"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Farm"

[node name="Mine" type="Button" parent="FacilityContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Mine"

[node name="CraftL" type="Button" parent="FacilityContainer"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Crafting"

[node name="CraftH" type="Button" parent="FacilityContainer"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Crafting"

[node name="CraftP" type="Button" parent="FacilityContainer"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Crafting"
